test/error/iocheck/err4.rzy
// Error: response is not allowed to write state

Err4 = Component
  what : response():R{0,100};

hfsm(A)
  a : R{0,100} = 0;
  
  A : state
    what : response():R{0,100}
      a := 42;
      return 0;
    end
  end
end

